# GPT-2-124M

./: .gitignore  CHANGELOG.md  README.md  fineweb.py  pyproject.toml  requirements.txt  train_gpt2.py
