[project]
name = "gpt-2-124m"
version = "0.10.0"
description = "Reproduce a simplified version of GPT-2 (124M) following Andrej Karpathy's tutorial"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "tiktoken>=0.7.0",
  "torch==2.3.1",
  "transformers==4.46.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
